fixing button letter spacing

--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -380,6 +380,7 @@ svg {
     background-color: #00f0ff;
     font-family: Neutrons;
     padding: 0.5em 1em 0em 1em;
+    letter-spacing: 4px;
 
     &:hover {
         background-color: #00f0ff;
